src/math_ops/snapshots/rbx_types_ops__math_ops__vec3__vec3_floor_div_vec3int16.snap
---
source: src/math_ops/vec3.rs
expression: "Vector3::new(15.0, 15.0, 15.0).floor_div(&Vector3int16::new(5, 10, 5).into())"
---
Vector3:
  - 3
  - 1
  - 3
